[package]
name = "madsim-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
madsim = {version =  "0.2.31" }
snap-buf = "0.4.0"
atomic_refcell="0.1.13"
pin-project-lite = "0.2.16"
futures = "0.3.31"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[package.metadata.docs.rs]
rustc-args = [
    "--cfg",
    "madsim",
]
rustdoc-args = [
    "--cfg",
    "madsim",
    "--cfg",
    "docsrs",
]

[target."cfg(madsim)".dependencies.tokio]
version = "1"
features = ["io-util"]

[target."cfg(not(madsim))".dependencies.tokio]
version = "1"
features = ["fs"]
